--- a/AWS workshop/.github/workflows/etl_schedule.yml
+++ b/AWS workshop/.github/workflows/etl_schedule.yml
@@ -2,9 +2,8 @@ name: Scheduled Weather ETL
 
 on:
   schedule:
-    # UTC TimeZone
     - cron: "0 * * * *"
-  workflow_dispatch: # GitHub interface friendly
+  workflow_dispatch:
 
 jobs:
   build:
