--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: "3.9"
 
       - name: Run ETL
-        run: python etl/transform.py
+        run: python "AWS workshop/etl/transform.py"
 
       - name: Sync to S3
         uses: jakejarvis/s3-sync-action@master
@@ -29,4 +29,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "eu-west-2"
-          SOURCE_DIR: "src"
+          SOURCE_DIR: "AWS workshop/src"
